# MagicUtil

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
scoop/: bundle.py  magicutil-base.json
src/: cli.rs  main.rs  utils.rs
src/bcrypt/: mod.rs
src/config/: config_util.rs  encrypted.rs  mod.rs  prop.rs  properties.rs
src/encrypt/: mod.rs
src/info/: mod.rs
src/open/: mod.rs  tail.rs
src/service/: mod.rs  service_utils.rs  utils.rs
src/system/: mod.rs  prop.rs
