[package]
name = "magicutil"
version = "0.1.8"
authors = ["Mark Nijboer <mark+magicutil@nijboer.email>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
opt-level = 'z'
lto = true
debug-assertions = false
debug = false
rpath = false
panic = "abort"
strip = true

[dependencies]
md5 = "0.7.0"
mac_address = "1.1.1"
simple-error = "0.2.3"
local_ipaddress = "0.1.3"
clap = { version = "3.0", features = ["cargo"] }
lazy_static = "1.4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
aes = "0.8.1"
base64 = "0.13.0"
pwhash = "1"
pad = "0.1.6"